<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="5dp"
    tools:context=".MainActivity">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/header"
        android:textSize="22sp"
        android:textStyle="bold"
        android:textColor="@color/white"
        android:padding="2dp"
        android:background="@color/dark_green"/>

    <Button
        android:id="@+id/btnBMI"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/bmiBtn"
        android:layout_marginTop="10dp"
        android:textStyle="bold"
        android:textSize="20sp"
        android:layout_marginBottom="8dp"
        android:layout_gravity="center"
        />

    <ScrollView
        android:id="@+id/scrollContent"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/content"
            />

    </ScrollView>

    <Button
        android:id="@+id/btnUnderWeight"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/under_weight_content"
        android:textColor="#2DA6B6"
        android:background="@android:color/transparent"
        android:layout_marginTop="10dp"/>
    <Button
        android:id="@+id/btnHealthyWeight"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/healthy_weight_content"
        android:textColor="#2DA6B6"
        android:background="@android:color/transparent"
        android:layout_marginTop="8dp"/>
    <Button
        android:id="@+id/btnOverWeight"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="#2DA6B6"
        android:background="@android:color/transparent"
        android:text="@string/over_weight_content"
        android:layout_marginTop="8dp"/>
    <Button
        android:id="@+id/btnObeseWeight"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:textColor="#2DA6B6"
        android:background="@android:color/transparent"
        android:text="@string/obese_weight_content"/>

</LinearLayout>