<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".BMI_Moniter">

<LinearLayout
    android:id="@+id/linearHeader"
    android:layout_width="match_parent"
    android:layout_height="50dp"
    android:orientation="horizontal"
    android:paddingStart="10dp"
    android:layout_marginTop="5dp"
    tools:ignore="RtlSymmetry,UselessParent">

    <ImageButton
        android:id="@+id/btnBack"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:src="@drawable/back"
        android:background="@android:color/transparent"
        android:contentDescription="@string/backBtn"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:text="@string/cal"
        android:textSize="30sp"
        android:gravity="center"
        android:textStyle="bold"
        />

</LinearLayout>

    <RelativeLayout
        android:id="@+id/relativeDetails"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:padding="10dp">

        <EditText
            android:id="@+id/editAge"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="5"
            android:gravity="center"
            android:hint="@string/age"
            android:inputType="number"
            android:textColor="@color/black"
            android:textSize="20sp" />

        <EditText
            android:id="@+id/editHeight"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_marginStart="45dp"
            android:layout_marginEnd="30dp"
            android:ems="9"
            android:gravity="center"
            android:hint="@string/height"
            android:inputType="number"
            android:textColor="@color/black"
            android:textSize="20sp" />

        <ToggleButton
            android:id="@+id/toggleGender"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/editAge"
            android:layout_marginStart="10dp"
            android:layout_marginTop="20dp"
            android:background="@android:color/transparent"
            android:drawableTop="@drawable/gender_selector"
            android:gravity="center"
            android:textOff="@string/female"
            android:textOn="@string/male" />

        <EditText
            android:id="@+id/editWeight"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/editHeight"
            android:layout_alignParentEnd="true"
            android:layout_marginStart="45dp"
            android:layout_marginTop="19sp"
            android:layout_marginEnd="30dp"
            android:ems="9"
            android:gravity="center"
            android:hint="@string/weight"
            android:inputType="number"
            android:textColor="@color/black"
            android:textSize="20sp" />


    </RelativeLayout>

    <Button
        android:id="@+id/btnCalculate"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/calculate"
        android:layout_below="@+id/relativeDetails"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        />
    <TextView
        android:id="@+id/textResult"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/btnCalculate"
        android:layout_marginTop="30dp"
        android:layout_centerHorizontal="true"
        android:textSize="20sp"
        android:textColor="@color/black"/>

    <TextView
        android:id="@+id/textBMIResult"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textResult"
        android:layout_marginTop="10dp"
        android:layout_centerHorizontal="true"
        android:textSize="30sp"
        android:textStyle="bold"/>





</RelativeLayout>