<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".UnderWeight_Activity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:orientation="horizontal"
        android:paddingStart="10dp"
        android:background="@color/dark_green"
        >
        <ImageButton
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:src="@drawable/back"

            android:background="@android:color/transparent"
            android:contentDescription="@string/backBtn"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/underweight"
            android:textSize="25sp"
            android:textStyle="bold"
            android:gravity="center"
            android:textColor="@color/white"/>

    </LinearLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:padding="5dp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/under_weight" />

    </ScrollView>

</LinearLayout>